Add api endpoint 'editor/collections'' to get a list of collections by project id
